# demolition_robot_development

./: .gitignore  README.md
.metadata/: .log4j2.xml  version.ini
brokk_demolition_sim/: README.md
brokk_demolition_sim/install/: local_setup.sh  setup.bash  setup.ps1  (+2 more)
control_demoliiton_robot/: .cproject  .mxproject  .project  README_PWM_TIP122.md  control_demoliiton_robot Debug.launch  control_demoliiton_robot.ioc
control_demolition_robot_csv/: .cproject  .mxproject  .project  controller_demolition_robot Debug.launch  controller_demolition_robot.ioc
cylinder_monitor/: README.md  pwm_monitor.py  pwm_monitor_fast.py  pwm_monitor_simple.py
demolition_robot_ros_simulation/: QUICKSTART.md  README.md
demolition_robot_ros_simulation/src/demolition_robot_control/: package.xml  setup.cfg  setup.py
demolition_robot_ros_simulation/src/demolition_robot_control/config/: robot_params.yaml
demolition_robot_ros_simulation/src/demolition_robot_control/demolition_robot_control/: __init__.py  joint_controller.py  serial_bridge.py
demolition_robot_ros_simulation/src/demolition_robot_control/launch/: hybrid.launch.py  real_robot.launch.py  simulation.launch.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
tools/: README_OLED_BITMAP.md  image_to_oled_bitmap.py
transmitter/: transmitter_f401 Debug.launch  transmitter_f401.ioc
transmitter_demolition_robot/: .cproject  .mxproject  .project  README.md  transmitter_demolition_robot Debug.launch  transmitter_demolition_robot.ioc
transmitter_demolition_robot_csv/: .project
(+339 files in other folders)
